# Distributed-Google-Workspace-Clone

./: CMakeLists.txt  Makefile  Makefile.bak  README.md  build_script.sh  clean_build_script.sh  clear_logs.sh  delete_script.sh
backups/127.0.0.1:8001/checkpoints/sw_tg/: 1  4  6  7  8  9
backups/127.0.0.1:8003/checkpoints/sw_tg/: 2  3  4  5
backups/127.0.0.1:8003/logs/: sw_tg
config/: frontend
react/: README.md
react/penn-cloud/: package-lock.json  package.json
react/penn-cloud/public/: index.html
react/penn-cloud/src/: App.js  index.js  theme.js
react/penn-cloud/src/components/: AdminPage.jsx  ConfirmDialog.jsx  EmailPage.jsx  ErrorPage.jsx  HomePage.jsx  IsolatedModal.jsx  LandingPage.jsx  NavBar.jsx  StorageActionModal.jsx  StoragePage.jsx  Views.jsx
react/penn-cloud/src/components/Login/: Login.jsx  Register.jsx  TextField.jsx  TextareaField.jsx
src/backend/: DIRECTIONS.txt  master_server.cc  master_server_test.cc  storage_server.cc  storage_server_test.cc  storage_server_test_automatic.cc
src/backend/EmailServices/: .smtp.cc.swp  Makefile  base_server.hpp  echoserver  echoserver.cc  echoserver.hpp  parse_input.cc  parse_input.h  pop3  pop3.cc  pop3server.hpp  send_mqueue  send_mqueue.cc  smtp  smtp.cc  smtpserver.hpp
src/backend/old/: BaseServer.hpp  MasterServer.cpp  StorageServer.cpp  StorageServer.hpp
src/frontend/: BaseServer.hpp  FrontendLoadBalancer.cpp  MainServer.cc  account_service.hpp  admin_service.hpp  backend_interface.hpp  definitions.hpp  email.hpp  filesystem_service.hpp  main_server.cc  utils.hpp  webmail_service.hpp
src/frontend/webmail/: parse_input.hpp  send_mqueue.cc  smtp.cc  smtpserver.hpp
src/helloworld/: CMakeLists.txt  greeter_server.cc
src/lib/: constants.h  tokenizer.cc  tokenizer.h
src/lib/proto/: masterserver.proto  storageserver.proto
static/: asset-manifest.json  index.html
static/static/css/: main.5816884f.css  main.5816884f.css.map
static/static/js/: main.854f2b32.js  main.854f2b32.js.LICENSE.txt  main.854f2b32.js.map
